<resources>
    <string name="app_name">Warehouse GLA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jhon Smith</string>
    <string name="nav_header_subtitle">jhonsmith@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_container">Open Container</string>
    <string name="menu_loading">Fabric Loading</string>
    <string name="menu_racking">Fabric Racking</string>
    <string name="menu_logout">Logout</string>

    <string name="server_maintenance">Server Maintenance</string>
    <string name="timeout_message">Request time out</string>
    <string name="session_over">Session Over</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warehouse_app">Warehouse App</string>
    <string name="open_container">Open Container</string>
    <string name="search">Search</string>
    <string name="fabric_loading">Fabric Loading</string>
    <string name="fabric_racking">Fabric Racking</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="want_to_open_seal">Want to open seal for container?</string>
    <string name="profile_update">Ubah Profile</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="example_email">example@ghimli.com</string>
    <string name="contrainer_detail">Contrainer Detail</string>
    <string name="invoice_number">Invoice Number :</string>
    <string name="supplier">Supplier :</string>
    <string name="incoming_date">Incoming Date :</string>
    <string name="want_to_open_seal_for_ncontainer">[Want to open seal for \ncontainer CAIU 9181529?</string>
    <string name="packinglist_info">Packinglist Information</string>
</resources>