<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_container"
            android:icon="@drawable/ic_transfer"
            android:title="@string/menu_container" />
        <item
            android:id="@+id/nav_loading"
            android:icon="@drawable/ic_receive"
            android:title="@string/menu_loading" />
        <item
            android:id="@+id/nav_racking"
            android:icon="@drawable/ic_shipping"
            android:title="@string/menu_racking" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>