<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.ivansuhendra.warehousegla.ui.fragment.container.ContainerFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingHorizontal="44dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/warehouse_app"
                        android:textAppearance="@style/TextAppearance.Regular11"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tvDept"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open_container"
                        android:textAppearance="@style/TextAppearance.Bold18"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/tvEditProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="4dp"
                        android:paddingVertical="2dp"
                        android:text="Ubah Profile"
                        android:textAppearance="@style/TextAppearance.Bold14"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginVertical="8dp"
                    android:background="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlHeader"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:paddingHorizontal="14dp">

            <LinearLayout
                android:id="@+id/search_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_rounded_button_gray"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_rounded_button_gray"
                    android:drawableEnd="@drawable/ic_search"
                    android:drawablePadding="12dp"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingVertical="10dp"
                    android:paddingStart="12dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="#8E8E8E"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Container List :"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Bold16" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="34dp"
                        android:background="#DEDEDED9" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>